Xây dựng trang quản trị (Admin Dashboard) - Tạo layout.tsx cho admin - Xây dựng trang (page.tsx) quản lý sản phẩm - Xây dựng Form "Thêm/Sửa ..." sản phẩm - Thêm các hàm Admin vào productsService.ts